--- a/app/src/main/res/layout/comment_recyclerview.xml
+++ b/app/src/main/res/layout/comment_recyclerview.xml
@@ -5,7 +5,8 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:maxHeight="500sp" >
+    android:maxHeight="500sp"
+    android:layout_marginBottom="5sp">
 
     <LinearLayout
         android:id="@+id/image_linear_layout"
