--- a/app/src/main/res/layout/fragment_booked_pack_details.xml
+++ b/app/src/main/res/layout/fragment_booked_pack_details.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/pack_details_pack_name"
+        android:id="@+id/pack_name"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="8"
@@ -23,7 +23,8 @@
         android:layout_width="match_parent"
         android:layout_height="0sp"
         android:layout_weight="92"
-        android:layout_marginTop="8sp">
+        android:layout_marginTop="8sp"
+        android:layout_margin="5sp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
