--- a/app/src/main/res/layout/fragment_booked_pack_details.xml
+++ b/app/src/main/res/layout/fragment_booked_pack_details.xml
@@ -6,8 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.fragmentBookedPackDetails"
     android:weightSum="100"
-    android:orientation="vertical"
-    android:id="@+id/fragment_booked_pack_details">
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/pack_name"
