--- a/app/src/main/res/layout/display_flights_recyclerview.xml
+++ b/app/src/main/res/layout/display_flights_recyclerview.xml
@@ -3,7 +3,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/flights_info_recycler_parent">
+    android:id="@+id/flights_info_recycler_parent"
+    android:layout_marginBottom="25sp">
 
     <TextView
         android:id="@+id/flight_departure_and_destination"
