--- a/app/src/main/res/layout/fragment_booked_pack_details.xml
+++ b/app/src/main/res/layout/fragment_booked_pack_details.xml
@@ -6,7 +6,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.fragmentBookedPackDetails"
     android:weightSum="100"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:animateLayoutChanges="true">
 
     <TextView
         android:id="@+id/pack_name"
@@ -61,6 +62,7 @@
         android:background="@color/comment_options_background">
         <Button
             android:id="@+id/delete_comment_button"
+            android:background="@color/colorAccent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/delete_comment_button"
