--- a/app/src/main/res/menu/navbar_menu.xml
+++ b/app/src/main/res/menu/navbar_menu.xml
@@ -2,7 +2,7 @@
 
     <item
         android:id="@+id/ic_navbar_preferences"
-        android:icon="@drawable/ic_loyalty_24dp"
+        android:icon="@drawable/heart_icon"
         android:title="" />
     <item
         android:id="@+id/ic_navbar_home"
