--- a/app/src/main/res/layout/fragment_booked_pack_details.xml
+++ b/app/src/main/res/layout/fragment_booked_pack_details.xml
@@ -5,39 +5,45 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.fragmentBookedPackDetails"
-    android:weightSum="100"
     android:orientation="vertical"
-    android:animateLayoutChanges="true">
+    android:animateLayoutChanges="true"
+    android:id="@+id/fragment_booked_pack_details">
 
-    <TextView
-        android:id="@+id/pack_name"
+    <LinearLayout
+        android:id="@+id/booked_pack_details"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="8"
-        android:fontFamily="@font/galada"
-        android:gravity="center"
-        android:text="@string/pack_name"
-        android:textColor="@color/text_title"
-        android:textSize="22sp"
-        android:background="@drawable/activity_item_squared_corner"/>
-
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="0sp"
-        android:layout_weight="92"
-        android:layout_marginTop="8sp"
-        android:layout_margin="5sp">
-        <LinearLayout
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="100">
+        <TextView
+            android:id="@+id/pack_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@drawable/activity_item_rounded_corner">
-            <TextView
-                android:text="@string/comment_section_title"
-                android:textSize="20sp"
-                android:layout_gravity="center"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+            android:layout_height="0dp"
+            android:layout_weight="8"
+            android:fontFamily="@font/galada"
+            android:gravity="center"
+            android:text="@string/pack_name"
+            android:textColor="@color/text_title"
+            android:textSize="22sp"
+            android:background="@drawable/activity_item_squared_corner"/>
+
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0sp"
+            android:layout_weight="92"
+            android:layout_marginTop="8sp"
+            android:layout_margin="5sp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@drawable/activity_item_rounded_corner">
+                <TextView
+                    android:text="@string/comment_section_title"
+                    android:textSize="20sp"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/add_comment_section"
                     android:layout_width="match_parent"
@@ -49,26 +55,27 @@
                     android:imeOptions="actionSend"
                     android:hint="@string/comment_hint"
                     android:textColorHint="@color/text_color" />
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/comments_rv"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/comment_options"
-        android:layout_width="match_parent"
-        android:layout_height="90sp"
-        android:background="@color/comment_options_background">
-        <Button
-            android:id="@+id/delete_comment_button"
-            android:background="@color/colorAccent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/delete_comment_button"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/comments_rv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+        </androidx.core.widget.NestedScrollView>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/comment_options"
+            android:layout_width="match_parent"
+            android:layout_height="90sp"
+            android:background="@color/comment_options_background">
+            <Button
+                android:id="@+id/delete_comment_button"
+                android:background="@color/colorAccent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/delete_comment_button"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 </LinearLayout>
