--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,6 +33,7 @@
         android:layout_marginTop="50sp"
         android:layout_marginEnd="20sp">
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/login_email_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="12sp"
@@ -53,7 +54,7 @@
             android:textColorHint="@color/hint_color">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/password"
+                android:id="@+id/login_password_text"
                 android:textColor="@color/text_color"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
