ajustement pour l'api

--- a/app/src/main/res/layout/fragment_accommodation_list.xml
+++ b/app/src/main/res/layout/fragment_accommodation_list.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".fragment.AccommodationList">
+    tools:context=".fragment.AccommodationList"
+    android:background="@drawable/sky">
 
     <TextView
         android:id="@+id/accommodation_list_title"
