--- a/app/src/main/res/layout/fragment_booked_pack_details.xml
+++ b/app/src/main/res/layout/fragment_booked_pack_details.xml
@@ -7,7 +7,8 @@
     tools:context=".fragment.fragmentBookedPackDetails"
     android:orientation="vertical"
     android:animateLayoutChanges="true"
-    android:id="@+id/fragment_booked_pack_details">
+    android:id="@+id/fragment_booked_pack_details"
+    android:background="@drawable/sky">
 
     <LinearLayout
         android:id="@+id/booked_pack_details"
