--- a/app/src/main/res/layout/fragment_home_pack_list.xml
+++ b/app/src/main/res/layout/fragment_home_pack_list.xml
@@ -7,7 +7,8 @@
     <androidx.core.widget.NestedScrollView
         android:id="@+id/pack_list_nested_scrollview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@drawable/sky">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
