--- a/app/src/main/res/layout/fragment_my_bookings.xml
+++ b/app/src/main/res/layout/fragment_my_bookings.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:weightSum="100">
+    android:weightSum="100"
+    android:background="@drawable/sky">
 
     <TextView
         android:layout_width="match_parent"
