--- a/app/src/main/res/layout/fragment_my_preferences.xml
+++ b/app/src/main/res/layout/fragment_my_preferences.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".fragment.fragmentMyPreferences"
     android:orientation="vertical"
-    android:weightSum="100">
+    android:weightSum="100"
+    android:background="@drawable/sky">
 
     <TextView
         android:layout_width="match_parent"
