--- a/app/src/main/res/layout/fragment_accommodation_list.xml
+++ b/app/src/main/res/layout/fragment_accommodation_list.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".fragment.AccommodationList"
-    android:background="@drawable/sky">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/accommodation_list_title"
