--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,7 @@
         <item name="android:textColor">@color/text_color</item>
         <item name="android:textColorHint">@color/colorAccent</item>
         <item name="editTextColor">@color/text_color</item>
+        <item name="android:statusBarColor">@color/black</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
