--- a/app/src/main/res/layout/booking_activities_recyclerview.xml
+++ b/app/src/main/res/layout/booking_activities_recyclerview.xml
@@ -1,28 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="horizontal"
+    android:background="@color/black"
+    android:weightSum="100">
 
     <TextView
         android:id="@+id/booking_activities_activity_info"
-        android:layout_width="wrap_content"
+        android:layout_width="0sp"
+        android:layout_weight="90"
         android:layout_height="wrap_content"
         android:text="@string/booking_activities_activity_info"
         android:textSize="20sp"
-        android:padding="5sp"
-        android:maxLength="25"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        android:padding="5sp"/>
     <CheckBox
         android:id="@+id/booking_activities_activity_checkbox"
-        android:layout_width="wrap_content"
+        android:layout_width="0sp"
+        android:layout_weight="8"
         android:layout_height="wrap_content"
         android:layout_marginEnd="15sp"
-        android:buttonTint="@color/checkbox_color"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_gravity="end"
+        android:buttonTint="@color/checkbox_color" />
+</LinearLayout>
